--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,15 @@
 {
     "java.project.sourcePaths": ["src"],
-    "java.project.outputPath": "bin"
+    "java.project.outputPath": "bin",
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "c:\\Program Files\\JavaFX\\lib\\javafx.base.jar",
+        "c:\\Program Files\\JavaFX\\lib\\javafx.controls.jar",
+        "c:\\Program Files\\JavaFX\\lib\\javafx.fxml.jar",
+        "c:\\Program Files\\JavaFX\\lib\\javafx.graphics.jar",
+        "c:\\Program Files\\JavaFX\\lib\\javafx.media.jar",
+        "c:\\Program Files\\JavaFX\\lib\\javafx.swing.jar",
+        "c:\\Program Files\\JavaFX\\lib\\javafx.web.jar",
+        "c:\\Program Files\\JavaFX\\lib\\javafx-swt.jar"
+    ]
 }
